Fix feedback broken styles

--- a/src/amo/components/AddonSummaryCard/styles.scss
+++ b/src/amo/components/AddonSummaryCard/styles.scss
@@ -62,7 +62,7 @@
 
       a,
       a:link {
-        color: $black;
+        color: var(--text-color-default);
         font-size: $font-size-l;
         text-decoration: underline;
       }
@@ -76,7 +76,7 @@
 }
 
 .AddonSummaryCard-addonAverage {
-  color: $grey-50;
+  color: var(--sub-text-color);
   margin-top: 6px;
   text-align: center;
 }
