--- a/src/amo/components/SearchFilters/styles.scss
+++ b/src/amo/components/SearchFilters/styles.scss
@@ -1,7 +1,7 @@
 @import '~amo/css/styles';
 
 .SearchFilters-label {
-  color: $grey-50;
+  color: var(--sub-text-color);
   display: block;
 }
 
